rust/tests/snapshots/test_nom_from_file__missing_signs.snap
---
source: rust/tests/test_nom_from_file.rs
expression: parsed
---
name: ~
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - name: x1
        value: 3
      - name: x2
        value: 5
      - name: x3
        value: 6
      - name: x4
        value: 9
      - name: x5
        value: 10
      - name: x6
        value: 10
constraints:
  c003:
    type: Standard
    name: c003
    coefficients:
      - name: x1
        value: -5
      - name: x2
        value: -1
      - name: x3
        value: 4
      - name: x4
        value: -2
      - name: x5
        value: 2
      - name: x6
        value: -1
    operator: GTE
    rhs: 3
variables:
  x1:
    name: x1
    var_type: Binary
  x2:
    name: x2
    var_type: Binary
  x3:
    name: x3
    var_type: Binary
  x4:
    name: x4
    var_type: Binary
  x5:
    name: x5
    var_type: Binary
  x6:
    name: x6
    var_type: Binary
