rust/tests/snapshots/test_nom_from_file__optional_labels.snap
---
source: rust/tests/test_nom_from_file.rs
expression: parsed
---
name: " LP format example"
sense: Minimize
objectives:
  OBJECTIVE_1:
    name: OBJECTIVE_1
    coefficients:
      - name: x
        value: 1
      - name: y
        value: 10
constraints:
  CONSTRAINT_2:
    type: Standard
    name: CONSTRAINT_2
    coefficients:
      - name: x
        value: -1
      - name: y
        value: 2
    operator: GTE
    rhs: 1
variables:
  a:
    name: a
    var_type: Binary
  x:
    name: x
    var_type: Binary
  y:
    name: y
    var_type: Binary
  z:
    name: z
    var_type: Binary
