rust/tests/snapshots/test_nom_from_file__output.snap
---
source: rust/tests/test_nom_from_file.rs
expression: parsed
---
name: ClpDefaultName
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - name: x0
        value: 5
      - name: x1
        value: 3
      - name: x2
        value: 2
      - name: x3
        value: 7
      - name: x4
        value: 4
constraints:
  cons0:
    type: Standard
    name: cons0
    coefficients:
      - name: x0
        value: 2
      - name: x1
        value: 8
      - name: x2
        value: 4
    operator: LTE
    rhs: 10
  cons1:
    type: Standard
    name: cons1
    coefficients:
      - name: x3
        value: 2
      - name: x4
        value: 5
    operator: LTE
    rhs: 11
variables:
  x0:
    name: x0
    var_type:
      DoubleBound:
        - 0
        - 1
  x1:
    name: x1
    var_type:
      DoubleBound:
        - 0
        - 1
  x2:
    name: x2
    var_type:
      DoubleBound:
        - 0
        - 1
  x3:
    name: x3
    var_type:
      DoubleBound:
        - 0
        - 1
  x4:
    name: x4
    var_type:
      DoubleBound:
        - 0
        - 1
