rust/tests/snapshots/test_nom_from_file__output_cplex_2.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: ~
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - name: X9
        value: 1
constraints:
  CONSTRAINT_5:
    type: Standard
    name: CONSTRAINT_5
    coefficients:
      - name: X0
        value: -1
    operator: GTE
    rhs: -5
variables:
  X0:
    name: X0
    var_type: Integer
  X1:
    name: X1
    var_type: Integer
  X2:
    name: X2
    var_type: Integer
  X3:
    name: X3
    var_type: Integer
  X4:
    name: X4
    var_type: Integer
  X5:
    name: X5
    var_type: Integer
  X6:
    name: X6
    var_type: Integer
  X7:
    name: X7
    var_type: Integer
  X8:
    name: X8
    var_type: Integer
  X9:
    name: X9
    var_type: Integer
